# cfd

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  answers_register.md  roadmap.md  to_avoid_bugs.md  todo.md
.claude/: settings.json
.claude/commands/: migrate.md  phase.md  review.md  validate.md
.claude/hooks/: post-edit.sh  pre-edit.sh
apps/: initial_conditions.hpp  sim.json  simulate.cpp  simulate_gpu.cu  sod.json  taylor_green.json  template.json
docs/: DOCUMENTATION.md  TODO.md  dev_log.md  literature_review.md  to_develop.md
docs/perf/: baseline_roofline.md  d05_shmem_tiling_analysis.md
docs/sessions/: 20260504_perplexity_analysis.md  browser_live_feed.md  claude_code_config_by_perplexity.md  operators_3_layers.md  parameters_read.md  refactor_session_config.md
docs/specs/: 2026-05-13-r7-diff-ops-design.md
docs/superpowers/plans/: 2026-05-12-refactor-phases.md  2026-05-13-r7-diff-ops.md  2026-05-13-r9-maintainability-plan.md  2026-05-14-r10-refactors-plan.md
docs/superpowers/specs/: 2026-05-13-r9-maintainability-design.md
include/: amr_operators.hpp  axis.hpp  bc_types.hpp  block_tree.hpp  bn_model.hpp  cell_block.hpp  checkpoint.hpp  checkpoint_zfp.hpp  chemistry.hpp  concepts.hpp  cpu_rk3.hpp  execution.hpp  flux_register.hpp  frame_packer.hpp  ghost_filler.hpp  gpu_pool.hpp  gpu_snapshot.hpp  http_server.hpp  ibm.hpp  linalg.hpp  live_streamer.hpp  lts_integrator.hpp  mpi_comm.hpp  neural_sgs.hpp  ns_solver.hpp  operators.hpp  sgs.hpp  sod_exact.hpp  vtk_writer.hpp  wall_model.hpp
include/cuda/: gpu_amr.cuh  gpu_block.cuh  gpu_cf.cuh  gpu_cfl.cuh  gpu_check.cuh  gpu_constants.cuh  gpu_ghost_cluster.cuh  gpu_ghost_fill.cuh  gpu_gmres.cuh  gpu_graph.cuh  gpu_hllc.cuh  gpu_meta_buffer.cuh  gpu_mpi_halo.cuh  gpu_p1.cuh  gpu_rhs.cuh  gpu_sgs.cuh  gpu_source.cuh  gpu_wmles.cuh
include/io/: checkpoint.hpp  checkpoint_zfp.hpp  frame_packer.hpp  live_streamer.hpp  vtk_writer.hpp
include/linalg/: linalg.hpp
include/mesh/: amr_operators.hpp  bc_types.hpp  block_tree.hpp  cell_block.hpp  flux_register.hpp  ghost_filler.hpp
include/models/: bn_model.hpp  bn_solver.hpp  chemistry.hpp  ibm.hpp  neural_sgs.hpp  sgs.hpp  wall_model.hpp
include/mpi/: mpi_comm.hpp
include/physics/: arrhenius.hpp  diff_ops.hpp  face_interp.hpp  hllc_flux.hpp  ideal_gas_eos.hpp  log_mean.hpp  p1_radiation.hpp  stiffened_gas_eos.hpp  teno5_recon.hpp  teno5_scalar.hpp  weno5_recon.hpp  weno5z_scalar.hpp
include/profiling/: profiler.hpp
include/schemes/: concepts.hpp  execution.hpp  operators.hpp
include/solver/: cpu_rk3.hpp  ensemble_solver.hpp  lts_integrator.hpp  ns_solver.hpp  solver_result.hpp
scripts/: launch.sh
src/: amr_operators.cpp  block_tree.cpp  bn_operators.cpp  checkpoint.cpp  checkpoint_zfp.cpp  chemistry.cpp  convective_rhs.cpp  cpu_rk3.cpp  flux_register.cpp  frame_packer.cpp  ghost_filler.cpp  http_server.cpp  ibm.cpp  imex_advance.cpp  instantiation_matrix.cpp  linalg.cpp  live_streamer.cpp  lts_advance.cpp  lts_integrator.cpp  mpi_comm.cpp  neural_sgs.cpp  ns_solver.cpp  operators.cpp  rhs_sensors.cpp  sgs.cpp  solver_factory.cpp  viewer_html.cpp  viscous_rhs.cpp  vtk_writer.cpp  wall_model.cpp
src/cuda/: gpu_amr.cu  gpu_cf.cu  gpu_cfl.cu  gpu_ghost_cluster.cu  gpu_ghost_fill.cu  gpu_gmres.cu  gpu_graph.cu  gpu_imex.cu  gpu_mpi_halo.cu  gpu_p1.cu  gpu_pool.cu  gpu_rhs.cu  gpu_sgs.cu  gpu_snapshot.cu  gpu_solver.cu  gpu_source.cu  gpu_wmles.cu
src/io/: checkpoint.cpp  checkpoint_zfp.cpp  frame_packer.cpp  http_server.cpp  live_streamer.cpp  viewer_html.cpp  vtk_writer.cpp
src/linalg/: linalg.cpp
src/mesh/: amr_operators.cpp  block_tree.cpp  flux_register.cpp  ghost_filler.cpp
src/models/: bn_flux_correction.cpp  bn_ghost_fill.cpp  bn_operators.cpp  bn_solver.cpp  chemistry.cpp  ibm.cpp  neural_sgs.cpp  sgs.cpp  wall_model.cpp
src/mpi/: mpi_comm.cpp
src/schemes/: convective_rhs.cpp  instantiation_matrix.cpp  operators.cpp  rhs_sensors.cpp  viscous_rhs.cpp
src/solver/: cpu_rk3.cpp  ensemble_solver.cpp  imex_advance.cpp  lts_integrator.cpp  ns_solver.cpp  solver_factory.cpp
tests/: test_amr6.cpp  test_bench_b1.cpp  test_bench_b2.cpp  test_bench_b3.cpp  test_bench_b4.cpp  test_bench_b5.cpp  test_bench_b6.cpp  test_bench_b7.cpp  test_bench_b8.cpp  test_bench_b9.cpp  test_block.cpp  test_checkpoint_zfp.cpp  test_chemistry.cpp  test_config.cpp  test_ghost_fill.cpp  test_ibm.cpp  test_imex.cpp  test_linalg.cpp  test_mpi.cpp  test_multiphase.cpp  test_neural_sgs.cpp  test_ns.cpp  test_operators.cpp  test_p75_dns_tgv.cpp  test_sat.cpp  test_step7.cpp  test_streamer.cpp  test_weno5_cf.cpp  test_wmles.cpp
tests/bench/: test_bench_b1.cpp  test_bench_b2.cpp  test_bench_b3.cpp  test_bench_b4.cpp  test_bench_b5.cpp  test_bench_b6.cpp  test_bench_b7.cpp  test_bench_b8.cpp  test_bench_b9.cpp  test_p75_dns_tgv.cpp
tests/cuda/: bench_cpu_vs_gpu_tgv.cu  bench_d0_roofline.cu  test_ghost_cluster.cu  test_gpu.cu  test_gpu_mpi_halo.cu  test_p10a3_gpu_nssolver.cu  test_p81_gpu_pool.cu  test_p82_gpu_ghost.cu  test_p83_gpu_rhs.cu  test_p84_gpu_amr.cu  test_p85_gpu_cfl.cu  test_p86_gpu_graph.cu  test_p91_gpu_nssolver.cu  test_p_sgs_gpu.cu  test_t29_gpu_amr_native.cu  test_t30_cuda_aware_halo.cu  test_t31_teno5a_gpu.cu  test_t32_gpu_gmres.cu  test_t33_arrhenius_gpu.cu  test_t34_p1_gpu.cu  test_t35_wmles_gpu.cu  test_t36_gpu_snapshot.cu
tests/io/: test_checkpoint_zfp.cpp  test_streamer.cpp
tests/linalg/: test_linalg.cpp
tests/mesh/: test_amr6.cpp  test_block.cpp  test_cell_block_accessors.cpp  test_ghost_fill.cpp
tests/models/: test_bn_amr.cpp  test_bn_solver.cpp  test_chemistry.cpp  test_ibm.cpp  test_multiphase.cpp  test_neural_sgs.cpp  test_wmles.cpp
tests/mpi/: test_mpi.cpp
tests/schemes/: test_operators.cpp  test_sat.cpp  test_weno5_cf.cpp
tests/solver/: test_config.cpp  test_ensemble.cpp  test_imex.cpp  test_ns.cpp  test_scheme_select.cpp  test_step7.cpp
viewer/: bridge.py  cfd-viewer  viewer.html
